--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Google Search Clone</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <img src="google.png" alt="Google Logo" class="logo" />
+  </body>
 </html>
