--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="google.png" alt="Google Logo" class="logo" />
     <div class="search-container">
-        <input type="text">
-        <div class="btn-wrapper">
-            <button class="btn">Google Search</button>
-            <button class="btn">I'm Feeling Lucky</button>
-        </div>
+      <img src="google.png" alt="Google Logo" class="logo" />
+
+      <input type="text" />
+      <div class="btn-wrapper">
+        <button class="btn">Google Search</button>
+        <button class="btn">I'm Feeling Lucky</button>
+      </div>
     </div>
   </body>
 </html>
